--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ anyhow = "1.0"
 walkdir = "2.5"
 which = "6.0"
 path-absolutize = "3.1"
-serde = { version = "1.0", features = ["derive"], optional = true }
-serde_json = { version = "1.0", optional = true }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [features]
 default = []
